--- a/python/lesson01/.ipynb
+++ b/python/lesson01/.ipynb
@@ -69,6 +69,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "vegetable = \"Patates\"\n",
+    "print(vegetable[2:5]) # tat\n",
+    "print(vegetable[-2:]) # es\n",
+    "print(vegetable[-2:-5:-1]) # eta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_one = \"upper\"\n",
+    "print(*str_one) # u p p e r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
