--- a/python/lesson01/.ipynb
+++ b/python/lesson01/.ipynb
@@ -91,6 +91,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "name = \"MARIAM\"\n",
+    "print(f\"my name is {name.capitalize()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
