--- a/python/lesson02/lesson02.ipynb
+++ b/python/lesson02/lesson02.ipynb
@@ -127,6 +127,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "mix_values={\n",
+    "    \"anmal\":('dog','cat'),\n",
+    "    22:\"key\",\n",
+    "    True:\"boolean\"\n",
+    "}\n",
+    "print(mix_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mix_values.update({\"yasin\":\"yağmur\"})\n",
+    "print(mix_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(22 in mix_values)\n",
+    "print(22 not in mix_values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
