--- a/python/lesson03/lesson03.ipynb
+++ b/python/lesson03/lesson03.ipynb
@@ -42,6 +42,57 @@
     "\n",
     "print(\"The largest number\", largest)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"lorem ipsumm dolor sit amet.\"\n",
+    "lst = text.split(\" \")\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "longest = \"\"\n",
+    "\n",
+    "while i < len(lst):\n",
+    "    if len(lst[i]) > len(longest):\n",
+    "        longest = lst[i]\n",
+    "    i += 1\n",
+    "print(longest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"clarusway\"\n",
+    "word=\"\"\n",
+    "for i, y in enumerate(text, 0):\n",
+    "    if i== 0:\n",
+    "        word += y\n",
+    "    else:\n",
+    "        word += \"-\" + y\n",
+    "print(word) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = {\n",
+    "    \"name\":\"yasin\",\n",
+    "    \"surname\":\"yağmur\",\n",
+    "    \"age\": 33\n",
+    "}\n",
+    "for i in user.values():\n",
+    "    print(i, end=\"\\t\")"
+   ]
   }
  ],
  "metadata": {
