--- a/python/lesson03/lesson03.ipynb
+++ b/python/lesson03/lesson03.ipynb
@@ -93,6 +93,80 @@
     "for i in user.values():\n",
     "    print(i, end=\"\\t\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "who = [\"I am \", \"You are \"]\n",
+    "mood = [\"happy\", \"confident\"]\n",
+    "for i in who:\n",
+    "  for ii in mood:\n",
+    "    print(i + ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toplam = 0\n",
+    "for i in range(1,75):\n",
+    "  toplam += i\n",
+    "print(toplam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = (11, 36, 33, 66 ,89, 21, 32, 16, 10)\n",
+    "evens = 0\n",
+    "odds = 0\n",
+    "for i in numbers :\n",
+    "  if i % 2== 0:\n",
+    "    evens += 1\n",
+    "  else:\n",
+    "    odds += 1\n",
+    "print(\"evens count: \",evens)\n",
+    "print(\"odds count: \",odds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tek = []\n",
+    "cift = []\n",
+    "for number in range(0,10):\n",
+    "    if number % 2 == 0:\n",
+    "        cift.append(number)\n",
+    "    else:\n",
+    "        tek.append(number)\n",
+    "        \n",
+    "print(tek)\n",
+    "print(cift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"susan\", \"tom\", \"edward\"]\n",
+    "mood = [\"happy\", \"sad\"]\n",
+    "for i in names:\n",
+    "  for ii in mood:\n",
+    "    print(i,\"is\", ii)"
+   ]
   }
  ],
  "metadata": {
