--- a/python/lesson04/lesson04.ipynb
+++ b/python/lesson04/lesson04.ipynb
@@ -46,6 +46,18 @@
     "\n",
     "print(empty_dict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"fishes.txt\",\"w\",encoding=\"utf-8\") as file:\n",
+    "   file.write(\"Orca is a kind of Dolphin Blue Whale is the largest animal known on earth.Sharks are the sister group to the Rays (batoids).The Tuna Fish can weigh up to 260 kg.Squid and Octopus are in the same class.\")\n",
+    "with open(\"fishes.txt\",\"r\",encoding=\"utf-8\") as file:\n",
+    "  print(file.read())"
+   ]
   }
  ],
  "metadata": {
