--- a/python/lesson04/lesson04.ipynb
+++ b/python/lesson04/lesson04.ipynb
@@ -58,6 +58,38 @@
     "with open(\"fishes.txt\",\"r\",encoding=\"utf-8\") as file:\n",
     "  print(file.read())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = ['Banana', 'Orange', 'Apple', 'Strawberry', 'Cherry']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"fruits.txt\",\"w\",encoding=\"utf-8\") as file:\n",
+    "  for meyve in fruits:\n",
+    "    file.write(meyve + \"\\n\")\n",
+    "with open(\"fruits.txt\",\"r\") as file :\n",
+    "  print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"fruits.txt\",\"r\") as file :\n",
+    "  print(file.readlines())"
+   ]
   }
  ],
  "metadata": {
